# MediaFramework

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  Info.plist  LICENSE.GPL  LICENSE.LGPL  Previewer.cpp  README.md  RELEASE  cc_main.cpp  codec_main.cpp  crc_main.cpp  file_main.cpp  matroska_main.cpp  mpx_main.cpp  test.cpp  xcode.sh
MediaFramework/: .CMakeLists.txt.swp  AudioConverter.cpp  AudioConverter.h  AudioResampler.h  ColorConverter.cpp  ColorConverter.h  ColorConvertor.h  DecodeSession.cpp  ImageFile.h  MediaClock.cpp  MediaClock.h  MediaCodec.cpp  MediaDecoder.h  MediaDefs.h  MediaDevice.cpp  MediaDevice.h  MediaExtractor.h  MediaFile.cpp  MediaFile.h  MediaFrame.cpp  MediaFrame.h  MediaFramework.cpp  MediaFramework.h  MediaFramework_c.cpp  MediaOut.h  MediaPacket.h  MediaPacketizer.h  MediaPlayer.cpp  MediaPlayer.h  MediaRenderer.cpp  MediaSession.cpp  MediaSession.h  MediaSource.cpp  MediaTime.h  MediaTypeDetector.cpp  MediaTypes.h  MediaUnit.h  PixelFormatDescriptor.cpp  RenderSession.cpp  Tiger.cpp
MediaFramework/algo/: CRC.cpp  CRC.h
MediaFramework/asf/: Asf.cpp  Asf.h
MediaFramework/audioresampler/: AudioResampler.cpp
MediaFramework/ffmpeg/: LavcDecoder.cpp  Libavcodec.cpp  Libavformat.cpp
MediaFramework/flac/: Flac.cpp  Flac.h  FlacFile.cpp
MediaFramework/id3/: ID3.cpp  ID3.h
MediaFramework/jpeg/: Exif.cpp  Exif.h  JFIF.cpp  JFIF.h  JIF.cpp  JIF.h  JPEG.cpp  JPEG.h  Markers.h  TIFF.cpp  TIFF.h
MediaFramework/lavc/: LavcDecoder.cpp  LavcDecoder.h
MediaFramework/lavc/old/: Audio.cpp  Audio.h  Decoder.cpp  Decoder.h
MediaFramework/mac/: AudioToolbox.cpp  VideoToolbox.cpp
MediaFramework/matroska/: EBML.cpp  EBML.h  MatroskaFile.cpp
MediaFramework/microsoft/: AviFile.cpp  Microsoft.cpp  Microsoft.h  RIFF.h  WaveFile.cpp
MediaFramework/mp3/: Mp3File.cpp  Mp3File.h  profile.first.txt
MediaFramework/mpeg4/: .Systems.h.swp  .Video.cpp.swp  Audio.cpp  Audio.h  Box.cpp  Box.h  Mp4File.cpp  Mp4File.h  Systems.cpp  Systems.h  Video.cpp  Video.h  Visual.cpp  Visual.h
MediaFramework/ms/: BITMAPINFOHEADER.cpp  BITMAPINFOHEADER.h
MediaFramework/openal/: OpenAL.cpp
MediaFramework/opengl/: GLVideo.cpp  GLVideo.h  OpenGL.cpp  OpenGLObject.cpp  OpenGLObject.h
MediaFramework/pcm/: pcm_convert.c  pcm_convert.h  pcm_interleave.c  pcm_interleave.h  pcm_utils.h  primitives.h
MediaFramework/primitive/: bswap.h  clamp.h
MediaFramework/sdl/: SDLAudio.cpp  SDLAudio.h  SDLVideo.cpp  SDLVideo.h
MediaFramework/sdl2/: .SDLVideo.cpp.swp  .SDLVideo.h.swp  SDLAudio.cpp  SDLAudio.h  SDLVideo.cpp  SDLVideo.h
MediaFramework/tags/: Tags.h
MediaFramework/tags/id3/: ID3.cpp  ID3.h  id3v2.3.0.txt  id3v2.4.0-frames.txt
MediaFramework/videotoolbox/: VTDecoder.cpp  VTDecoder.h  VideoToolboxDecoder.cpp
MediaFramework/wave/: WaveFile.cpp  WaveFile.h
cmake/: FindLibyuv.cmake  android.ndk.cmake  android.pdk.cmake  mingw32.msys.cmake
gtest-1.7.0/: CHANGES  configure
gtest-1.7.0/build-aux/: ltmain.sh
gtest-1.7.0/fused-src/gtest/: gtest-all.cc  gtest.h
gtest-1.7.0/include/gtest/: gtest-death-test.h  gtest-test-part.h  gtest.h  gtest_pred_impl.h
gtest-1.7.0/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-param-util.h  gtest-port.h
gtest-1.7.0/m4/: libtool.m4
gtest-1.7.0/msvc/: gtest-md.sln  gtest-md.vcproj  gtest.sln  gtest.vcproj  gtest_main-md.vcproj  gtest_main.vcproj  gtest_prod_test-md.vcproj  gtest_prod_test.vcproj  gtest_unittest-md.vcproj  gtest_unittest.vcproj
gtest-1.7.0/scripts/: gen_gtest_pred_impl.py
gtest-1.7.0/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest.cc
gtest-1.7.0/test/: gtest-linked_ptr_test.cc  gtest-param-test_test.cc  gtest-port_test.cc  gtest_pred_impl_unittest.cc  gtest_premature_exit_test.cc  gtest_test_utils.py  gtest_unittest.cc
gtest-1.7.0/xcode/Config/: ReleaseProject.xcconfig
